--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
       <br>
       <button onclick="startClassification();">START</button>
       <h3 id="result_label">I can hear - </h3>
+      <h3 id="result_confidence">Accuracy - </h3>
     </center>
+    <div>
+    </div>
     </div>
 
     <div class="copy_right_footer">
